fix: menu not rendering on small screen

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -54,7 +54,6 @@
     flex-direction: column;
     justify-content: center;
     float: left;
-    width: 17em;
     margin: 0 1.5em 0 0;
 }
 
@@ -64,6 +63,12 @@
 
 .content {
     margin: 0 3em;
+}
+
+@media (max-width: 450px) {
+    .content {
+        margin: 0 1em;
+    }
 }
 
 .breadcrumb {
